mini cart and cart tweaks

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -7,7 +7,6 @@
   height: 100%;
   display: flex;
   justify-content: flex-end;
-  background-color: rgba(var(--color-foreground), 0.5);
   transition: visibility var(--duration-default) ease;
 }
 
@@ -16,13 +15,9 @@
 }
 
 .drawer__inner {
+  position: relative;
+  width: 100vw;
   height: 100%;
-  width: 40rem;
-  max-width: calc(100vw - 3rem);
-  padding: 0 1.5rem;
-  border: 0.1rem solid rgba(var(--color-foreground), 0.2);
-  border-right: 0;
-  background-color: rgb(var(--color-background));
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -30,10 +25,33 @@
   transition: transform var(--duration-default) ease;
 }
 
+@media screen and (min-width: 640px) {
+  .drawer__inner {
+    --gap: 10px;
+    --padding: 20px;
+    --column-width: calc((100vw - (2 * var(--padding)) - (11 * var(--gap))) / 12);
+    --span: 6;
+    width: calc((var(--span) * var(--column-width)) + ((var(--span) - 1) * var(--gap)) + var(--padding));
+  }
+}
+
+
+@media screen and (min-width: 768px) {
+  .drawer__inner {
+    --span: 4;
+  }
+}
+
+
+@media screen and (min-width: 1024px) {
+  .drawer__inner {
+    --span: 3;
+  }
+}
+
 .drawer__inner-empty {
   height: 100%;
   padding: 0 1.5rem;
-  background-color: rgb(var(--color-background));
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -70,40 +88,13 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
   transform: translateX(0);
 }
 
-.drawer__header {
-  position: relative;
-  background-color: rgb(var(--color-background));
-  padding: 1.5rem 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.drawer__heading {
-  margin: 0 0 1rem;
-}
-
 .drawer__close {
+  top: 1.25rem;
+  right: 1.25rem;
   display: inline-block;
   padding: 0;
-  min-width: 4.4rem;
-  min-height: 4.4rem;
-  box-shadow: 0 0 0 0.2rem rgba(var(--color-button), 0);
   position: absolute;
-  top: 10px;
-  right: -10px;
-  color: rgb(var(--color-foreground));
-  background-color: transparent;
-  border: none;
-  }
-
-.cart-drawer__warnings .drawer__close {
-  right: 5px;
-}
-
-.drawer__close svg {
-  height: 2.4rem;
-  width: 2.4rem;
+  cursor: pointer;
 }
 
 .drawer__contents {
@@ -113,8 +104,6 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
 }
 
 .drawer__footer {
-  background-color: rgb(var(--color-background));
-  border-top: 0.1rem solid rgba(var(--color-foreground), 0.2);
   padding: 1.5rem 0;
 }
 
@@ -124,7 +113,6 @@ cart-drawer-items.is-empty + .drawer__footer {
 
 .drawer__footer > details {
   margin-top: -1.5rem;
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.2);
 }
 
 .drawer__footer > details[open] {
@@ -134,8 +122,18 @@ cart-drawer-items.is-empty + .drawer__footer {
 .drawer__footer summary {
   display: flex;
   position: relative;
-  line-height: 1;
-  padding: 1.5rem 0;
+}
+
+.drawer__footer > details .summary__title {
+}
+
+.drawer__footer > details .summary__title::after {
+  content: '+';
+}
+
+
+.drawer__footer > details[open] .summary__title::after {
+  content: '-';
 }
 
 .drawer__footer > details + .cart-drawer__footer {
@@ -176,18 +174,9 @@ cart-drawer {
   flex-grow: 1;
 }
 
-.cart-drawer .cart-items, .cart-drawer tbody {
+.cart-drawer .cart-items {
   display: block;
   width: 100%;
-}
-
-.cart-drawer thead {
-  display: inline-table;
-  width: 100%;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  background-color: rgb(var(--color-base-background-1));
 }
 
 cart-drawer-items {
@@ -205,32 +194,9 @@ cart-drawer-items {
   }
 }
 
+
 .cart-drawer .cart-item__image {
   max-width: 100%;
-}
-
-.cart-drawer .cart-items thead {
-  margin-bottom: 0.5rem;
-}
-
-.cart-drawer .cart-items thead th:first-child,
-.cart-drawer .cart-items thead th:last-child {
-  width: 0;
-  padding: 0;
-}
-
-.cart-drawer .cart-items thead th:nth-child(2) {
-  width: 50%;
-  padding-left: 0;
-}
-
-.cart-drawer .cart-items thead tr {
-  display: table-row;
-  margin-bottom: 0;
-}
-
-.cart-drawer .cart-items th {
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
 }
 
 .cart-drawer .cart-item:last-child {
@@ -240,22 +206,6 @@ cart-drawer-items {
 .cart-drawer .cart-item .loading-overlay {
   right: 5px;
   padding-top: 2.5rem;
-}
-
-.cart-drawer .cart-items td {
-  padding-top: 2rem;
-}
-
-.cart-drawer .cart-item > td + td {
-  padding-left: 1rem;
-}
-
-
-.cart-drawer .cart-item__totals {
-  pointer-events: none;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
 }
 
 .cart-drawer.cart-drawer .cart-item__price-wrapper > *:only-child {
@@ -268,42 +218,16 @@ cart-drawer-items {
   gap: 0.6rem;
 }
 
-.cart-drawer .unit-price {
-  margin-top: 0.6rem;
-}
-
-.cart-drawer .cart-items .cart-item__quantity {
-  padding-top: 0;
-}
-
-@media screen and (max-width: 749px) {
-  .cart-drawer .cart-item cart-remove-button {
-    margin-left: 0;
-  }
-}
-
-.cart-drawer__footer > * + * {
-  margin-top: 1rem;
-}
 
 .cart-drawer .totals {
   justify-content: space-between;
-}
-
-.cart-drawer .price {
-  line-height: 1;
-}
-
-.cart-drawer .tax-note {
-  margin: 1.2rem 0 1rem auto;
-  text-align: left;
 }
 
 .cart-drawer .product-option dd {
   word-break: break-word;
 }
 
-.cart-drawer details[open]>summary .icon-caret {
+.cart-drawer details[open] > summary .icon-caret {
   transform: rotate(180deg);
 }
 
@@ -327,7 +251,7 @@ cart-drawer-items {
 }
 
 .drawer__footer #dynamic-checkout-cart ul > li {
-	flex-basis: calc(50% - 0.5rem) !important;
+  flex-basis: calc(50% - 0.5rem) !important;
   margin: 0 !important;
 }
 
@@ -336,7 +260,7 @@ cart-drawer-items {
   margin-right: 0.5rem !important;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .drawer__footer #dynamic-checkout-cart ul > li {
     flex-basis: calc(100% / 3 - 0.5rem) !important;
     margin: 0 !important;
@@ -346,7 +270,7 @@ cart-drawer-items {
   .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(2) ~ li,
   .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(4),
   .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(4) ~ li {
-	  flex-basis: calc(50% - 0.5rem) !important;
+    flex-basis: calc(50% - 0.5rem) !important;
   }
 }
 
@@ -355,10 +279,58 @@ cart-drawer-items::-webkit-scrollbar {
 }
 
 cart-drawer-items::-webkit-scrollbar-thumb {
-  background-color: rgba(var(--color-foreground), 0.7);
-  border-radius: 100px;
 }
 
 cart-drawer-items::-webkit-scrollbar-track-piece {
   margin-top: 31px;
+}
+
+.cart-drawer .quantity-popover-container {
+  padding: 0;
+}
+
+.cart-drawer .quantity-popover__info.global-settings-popup {
+  transform: translateY(0);
+  right: 0;
+}
+
+.cart-drawer .cart-item__error {
+}
+
+.cart-drawer .quantity-popover__info + .cart-item__error {
+  margin-top: 0.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .cart-drawer .cart-item__quantity--info quantity-popover > * {
+    padding-left: 0;
+  }
+
+  .cart-drawer .cart-item__error {
+    margin-left: 0;
+  }
+}
+
+
+/* Custom  */
+
+.drawer__footer input[type=checkbox]:focus-visible ~ label:before {
+  outline: 1px solid black;
+}
+
+.drawer__footer input[type=checkbox] ~ label:before {
+  width: 12px;
+  height: 12px;
+  border: 1px solid black;
+  content: '';
+  display: inline-block;
+  line-height: .8;
+  text-align: center;
+  vertical-align: text-bottom;
+  margin-right: .25rem;
+}
+
+
+.drawer__footer input[type=checkbox]:checked ~ label:before {
+  content: '✓'
 }
