--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -592,7 +592,7 @@ strong, b {
   opacity: 0.4;
 }
 
-.shopify-challenge__container input[type=submit]:hover,.shopify-challenge__container input[type=submit]:focus {
+.shopify-challenge__container input[type=submit]:hover:not(:disabled):not([aria-disabled='true']):not(.disabled),.shopify-challenge__container input[type=submit]:focus:not(:disabled):not([aria-disabled='true']):not(.disabled) {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -956,21 +956,21 @@ body .shopify-policy__body {
   opacity: 0.4 !important;
 }
 
-.\!button:hover, .\!button:focus {
+.\!button:hover:not(:disabled):not([aria-disabled='true']):not(.disabled), .\!button:focus:not(:disabled):not([aria-disabled='true']):not(.disabled) {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.button:hover, .button:focus {
+.button:hover:not(:disabled):not([aria-disabled='true']):not(.disabled), .button:focus:not(:disabled):not([aria-disabled='true']):not(.disabled) {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.\!button:hover, .\!button:focus {
+.\!button:hover:not(:disabled):not([aria-disabled='true']):not(.disabled), .\!button:focus:not(:disabled):not([aria-disabled='true']):not(.disabled) {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -984,7 +984,7 @@ body .shopify-policy__body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.button--reverse:hover {
+.button--reverse:hover:not(:disabled):not([aria-disabled='true']):not(.disabled), .button--reverse:focus:not(:disabled):not([aria-disabled='true']):not(.disabled) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -1039,6 +1039,10 @@ body .shopify-policy__body {
   inset: 0rem;
 }
 
+.bottom-0 {
+  bottom: 0rem;
+}
+
 .left-0 {
   left: 0rem;
 }
@@ -1051,12 +1055,20 @@ body .shopify-policy__body {
   right: 0.75rem;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
 .top-0 {
   top: 0rem;
 }
 
 .top-3 {
   top: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
 }
 
 .top-full {
@@ -1067,48 +1079,12 @@ body .shopify-policy__body {
   top: var(--header-height);
 }
 
-.bottom-0 {
-  bottom: 0rem;
-}
-
-.left-auto {
-  left: auto;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-\[100\%-320rem\] {
-  top: 100%-320rem;
-}
-
-.-top-80 {
-  top: -20rem;
-}
-
-.-top-90 {
-  top: -22.5rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .z-30 {
@@ -1117,14 +1093,6 @@ body .shopify-policy__body {
 
 .z-40 {
   z-index: 40;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
-.z-\[10000\] {
-  z-index: 10000;
 }
 
 .col-span-2 {
@@ -1139,14 +1107,6 @@ body .shopify-policy__body {
   grid-column: span 5 / span 5;
 }
 
-.col-span-8 {
-  grid-column: span 8 / span 8;
-}
-
-.col-span-4 {
-  grid-column: span 4 / span 4;
-}
-
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
@@ -1155,20 +1115,16 @@ body .shopify-policy__body {
   grid-column-start: 1;
 }
 
+.col-start-4 {
+  grid-column-start: 4;
+}
+
 .col-start-6 {
   grid-column-start: 6;
 }
 
 .col-start-8 {
   grid-column-start: 8;
-}
-
-.col-start-4 {
-  grid-column-start: 4;
-}
-
-.col-start-10 {
-  grid-column-start: 10;
 }
 
 .col-end-13 {
@@ -1210,12 +1166,12 @@ body .shopify-policy__body {
   margin-left: -10px;
 }
 
-.mb-15 {
-  margin-bottom: 3.75rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-22 {
+  margin-bottom: 5.5rem;
 }
 
 .mb-25 {
@@ -1262,6 +1218,10 @@ body .shopify-policy__body {
   margin-top: 3rem;
 }
 
+.mt-18 {
+  margin-top: 4.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1278,12 +1238,12 @@ body .shopify-policy__body {
   margin-top: 1rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-40 {
+  margin-top: 10rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mt-9 {
@@ -1296,34 +1256,6 @@ body .shopify-policy__body {
 
 .mt-text-line {
   margin-top: 1rem;
-}
-
-.mb-22 {
-  margin-bottom: 5.5rem;
-}
-
-.mt-18 {
-  margin-top: 4.5rem;
-}
-
-.mt-\[100vh\] {
-  margin-top: 100vh;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
 }
 
 .block {
@@ -1358,6 +1290,10 @@ body .shopify-policy__body {
   display: none;
 }
 
+.h-0 {
+  height: 0rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1370,10 +1306,6 @@ body .shopify-policy__body {
   height: 0.75rem;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1382,20 +1314,12 @@ body .shopify-policy__body {
   height: var(--header-height);
 }
 
-.h-\[200\%\] {
-  height: 200%;
+.w-0 {
+  width: 0rem;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-0 {
-  height: 0rem;
-}
-
-.h-2 {
-  height: 0.5rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-1\/5 {
@@ -1408,10 +1332,6 @@ body .shopify-policy__body {
 
 .w-20 {
   width: 5rem;
-}
-
-.w-25 {
-  width: 6.25rem;
 }
 
 .w-3 {
@@ -1435,25 +1355,21 @@ body .shopify-policy__body {
   width: 100%;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
+.w-1\/4 {
+  width: 25%;
 }
 
-.w-0 {
-  width: 0rem;
+.w-80 {
+  width: 20rem;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-50 {
+  width: 12.5rem;
 }
 
 .max-w-\[max-content\] {
   max-width: -moz-max-content;
   max-width: max-content;
-}
-
-.max-w-screen-lg {
-  max-width: 1024px;
 }
 
 .max-w-xs {
@@ -1486,16 +1402,6 @@ body .shopify-policy__body {
 
 .translate-y-full {
   --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-full {
-  --tw-translate-y: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-0 {
-  --tw-translate-y: 0rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1550,6 +1456,10 @@ body .shopify-policy__body {
   grid-auto-flow: row dense;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
@@ -1572,10 +1482,6 @@ body .shopify-policy__body {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-\[auto_1fr\] {
-  grid-template-columns: auto 1fr;
 }
 
 .grid-rows-\[auto_1fr\] {
@@ -1703,19 +1609,13 @@ body .shopify-policy__body {
   border-bottom-width: 1px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-\[\#ff9999\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 153 153 / var(--tw-border-opacity));
-}
-
-.border-\[\#ff0000\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 0 0 / var(--tw-border-opacity));
 }
 
 .border-b-black {
@@ -1723,22 +1623,18 @@ body .shopify-policy__body {
   border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-black\/10 {
-  background-color: rgb(0 0 0 / 0.1);
+.border-l-black {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
+.bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(179 50 44 / var(--tw-bg-opacity));
 }
 
 .bg-contain {
@@ -1767,10 +1663,6 @@ body .shopify-policy__body {
      object-fit: cover;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -1779,12 +1671,12 @@ body .shopify-policy__body {
   padding: 0.75rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-2 {
@@ -1795,16 +1687,6 @@ body .shopify-policy__body {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-text-line {
@@ -1818,6 +1700,10 @@ body .shopify-policy__body {
 
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-5 {
@@ -1854,18 +1740,6 @@ body .shopify-policy__body {
 
 .pt-3 {
   padding-top: 0.75rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-22 {
-  padding-bottom: 5.5rem;
-}
-
-.pt-18 {
-  padding-top: 4.5rem;
 }
 
 .text-center {
@@ -1906,11 +1780,6 @@ body .shopify-policy__body {
   letter-spacing: 0.02em;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-gray {
   --tw-text-opacity: 1;
   color: rgb(153 153 153 / var(--tw-text-opacity));
@@ -1930,16 +1799,6 @@ body .shopify-policy__body {
   color: rgb(0 0 0 / var(--tw-placeholder-opacity));
 }
 
-.placeholder-\[\#ff0000\]::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-\[\#ff0000\]::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-placeholder-opacity));
-}
-
 .placeholder-gray::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(153 153 153 / var(--tw-placeholder-opacity));
@@ -1948,6 +1807,10 @@ body .shopify-policy__body {
 .placeholder-gray::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(153 153 153 / var(--tw-placeholder-opacity));
+}
+
+.accent-black {
+  accent-color: #000000;
 }
 
 .opacity-40 {
@@ -1991,14 +1854,6 @@ body .shopify-policy__body {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
 }
 
 .focus {
@@ -2130,34 +1985,6 @@ body .shopify-pc__prefs__header-actions button {
   left: -0.5rem;
 }
 
-.placeholder\:text-\[\#993333\]::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(153 51 51 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[\#993333\]::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(153 51 51 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[\#ff0000\]::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[\#ff0000\]::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-text-opacity));
-}
-
-.autofill\:bg-transparent:-webkit-autofill {
-  background-color: transparent;
-}
-
-.autofill\:bg-transparent:autofill {
-  background-color: transparent;
-}
-
 .focus-within\:not-sr-only:focus-within {
   position: static;
   width: auto;
@@ -2173,28 +2000,12 @@ body .shopify-pc__prefs__header-actions button {
   position: absolute;
 }
 
-.focus-within\:top-40:focus-within {
-  top: 10rem;
-}
-
-.focus-within\:top-10:focus-within {
-  top: 2.5rem;
-}
-
 .focus-within\:left-1\/2:focus-within {
   left: 50%;
 }
 
-.focus-within\:top-30:focus-within {
-  top: 7.5rem;
-}
-
 .focus-within\:top-20:focus-within {
   top: 5rem;
-}
-
-.focus-within\:top-15:focus-within {
-  top: 3.75rem;
 }
 
 .focus-within\:h-auto:focus-within {
@@ -2205,18 +2016,9 @@ body .shopify-pc__prefs__header-actions button {
   width: auto;
 }
 
-.focus-within\:translate-y-0:focus-within {
-  --tw-translate-y: 0rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .focus-within\:-translate-x-1\/2:focus-within {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.focus-within\:border:focus-within {
-  border-width: 1px;
 }
 
 .hover\:text-black:hover {
@@ -2240,12 +2042,6 @@ body .shopify-pc__prefs__header-actions button {
 .focus\:ring-0:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2298,6 +2094,10 @@ body .shopify-pc__prefs__header-actions button {
     width: 9.375rem;
   }
 
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .sm\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -2312,16 +2112,20 @@ body .shopify-pc__prefs__header-actions button {
 }
 
 @media (min-width: 768px) {
-  .md\:left-auto {
-    left: auto;
-  }
-
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
 
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
   .md\:col-span-4 {
     grid-column: span 4 / span 4;
+  }
+
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
   }
 
   .md\:col-span-6 {
@@ -2332,16 +2136,12 @@ body .shopify-pc__prefs__header-actions button {
     grid-column: span 8 / span 8;
   }
 
-  .md\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
-  .md\:col-span-5 {
-    grid-column: span 5 / span 5;
-  }
-
   .md\:col-start-1 {
     grid-column-start: 1;
+  }
+
+  .md\:col-start-10 {
+    grid-column-start: 10;
   }
 
   .md\:col-start-2 {
@@ -2368,10 +2168,6 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-start: 17;
   }
 
-  .md\:col-start-10 {
-    grid-column-start: 10;
-  }
-
   .md\:col-end-10 {
     grid-column-end: 10;
   }
@@ -2392,10 +2188,6 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-end: 5;
   }
 
-  .md\:col-end-6 {
-    grid-column-end: 6;
-  }
-
   .md\:col-end-9 {
     grid-column-end: 9;
   }
@@ -2404,16 +2196,8 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-end: 16;
   }
 
-  .md\:row-start-auto {
-    grid-row-start: auto;
-  }
-
   .md\:mb-0 {
     margin-bottom: 0rem;
-  }
-
-  .md\:mb-20 {
-    margin-bottom: 5rem;
   }
 
   .md\:mb-9 {
@@ -2422,18 +2206,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .md\:mt-0 {
     margin-top: 0rem;
-  }
-
-  .md\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
-  .md\:mt-4 {
-    margin-top: 1rem;
-  }
-
-  .md\:mt-9 {
-    margin-top: 2.25rem;
   }
 
   .md\:block {
@@ -2456,16 +2228,12 @@ body .shopify-pc__prefs__header-actions button {
     display: none;
   }
 
-  .md\:w-35 {
-    width: 8.75rem;
-  }
-
   .md\:w-auto {
     width: auto;
   }
 
-  .md\:w-1\/6 {
-    width: 16.666667%;
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:grid-flow-dense {
@@ -2492,16 +2260,8 @@ body .shopify-pc__prefs__header-actions button {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
   .md\:grid-rows-1 {
     grid-template-rows: repeat(1, minmax(0, 1fr));
-  }
-
-  .md\:gap-5 {
-    gap: 1.25rem;
   }
 
   .md\:gap-gutter {
@@ -2521,6 +2281,15 @@ body .shopify-pc__prefs__header-actions button {
     --tw-space-x-reverse: 0;
     margin-right: calc(0rem * var(--tw-space-x-reverse));
     margin-left: calc(0rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:border-l {
+    border-left-width: 1px;
+  }
+
+  .md\:border-l-black {
+    --tw-border-opacity: 1;
+    border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
   }
 
   .md\:pb-0 {
@@ -2565,12 +2334,12 @@ body .shopify-pc__prefs__header-actions button {
     grid-column: span 3 / span 3;
   }
 
-  .lg\:col-span-6 {
-    grid-column: span 6 / span 6;
-  }
-
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
+  }
+
+  .lg\:col-span-6 {
+    grid-column: span 6 / span 6;
   }
 
   .lg\:col-start-3 {
@@ -2591,10 +2360,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .lg\:col-end-4 {
     grid-column-end: 4;
-  }
-
-  .lg\:col-end-7 {
-    grid-column-end: 7;
   }
 
   .lg\:col-end-9 {
@@ -2621,18 +2386,6 @@ body .shopify-pc__prefs__header-actions button {
     width: 1.25rem;
   }
 
-  .lg\:w-1\/6 {
-    width: 16.666667%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-1\/4 {
-    width: 25%;
-  }
-
   .lg\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -2640,17 +2393,9 @@ body .shopify-pc__prefs__header-actions button {
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
-  .lg\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1280px) {
-  .xl\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
   .xl\:col-start-3 {
     grid-column-start: 3;
   }
