--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -11,6 +11,13 @@
   font-weight: normal;
 }
 
+.cart-items tbody {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  row-gap: 10px;
+}
+
 .cart-item__quantity-wrapper {
   display: flex;
   align-items: center;
@@ -24,23 +31,12 @@
   text-align: right;
 }
 
-.cart-item__image-container {
-  display: inline-flex;
-  align-items: flex-start;
-}
-
 .cart-item__image-container:after {
   content: none;
 }
 
 .cart-item__image {
   height: auto;
-}
-
-@media screen and (min-width: 750px) {
-  .cart-item__image {
-    max-width: 100%;
-  }
 }
 
 .cart-item__details {
@@ -67,7 +63,6 @@
 
 .cart-item__name {
   text-decoration: none;
-  display: block;
 }
 
 .cart-item__price-wrapper > * {
@@ -149,7 +144,6 @@ cart-remove-button .icon-remove {
 .cart-item__error {
   display: flex;
   align-items: center;
-  margin-top: 1rem;
 }
 
 .cart-item__error-text {
@@ -174,26 +168,11 @@ cart-remove-button .icon-remove {
 
 @media screen and (max-width: 767px) {
   .cart-items,
-  .cart-items thead,
-  .cart-items tbody {
+  .cart-items thead {
     display: block;
     width: 100%;
   }
 
-  .cart-item:last-child {
-    margin-bottom: 0;
-  }
-
-
-  .cart-item__quantity-wrapper {
-    flex-wrap: wrap;
-  }
-
-  .cart-item__totals {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
-  }
 }
 
 @media screen and (min-width: 750px) {
