--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -6,7 +6,7 @@
 	{% paginate collection.products by section.settings.products_per_page %}
     <div class="grid grid-cols-2 grid-flow-dense md:grid-cols-3 lg:grid-cols-4 gap-x-gutter gap-y-6">
       {% for product in collection.products %}
-        {%- render 'card-product', collection: collection, section: section, card_product: product, show_vendor: section.settings.show_vendor, show_rating: section.settings.show_rating, show_secondary_image: section.settings.show_secondary_image -%}
+        {%- render 'card-product', collection: collection, section: section, card_product: product, show_rating: section.settings.show_rating, show_secondary_image: section.settings.show_secondary_image -%}
       {% endfor %}
 		</div>
 		{% render 'pagination', paginate: paginate %}
@@ -36,12 +36,6 @@
       "id": "show_secondary_image",
       "default": true,
       "label": "t:sections.main-collection-product-grid.settings.show_secondary_image.label"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_vendor",
-      "default": true,
-      "label": "t:sections.main-collection-product-grid.settings.show_vendor.label"
     },
     {
       "type": "checkbox",
