--- a/sections/main-page-designers.liquid
+++ b/sections/main-page-designers.liquid
@@ -1,4 +1,5 @@
 {{ 'component-rte.css' | asset_url | stylesheet_tag }}
+{% assign collection_list = section.settings.collection_list | sort: 'title' %}
 
 <ul class="sm:hidden padding-x">
   {% for collection in section.settings.collection_list %}
@@ -9,19 +10,21 @@
 <div class="md:pt-[5vw]">
   <page-collections class="h-full hidden sm:grid grid-cols-2 md:grid-cols-12 sm:gap-gutter padding-x items-start">
     <ul class="lg:col-start-3 md:col-span-2 collections-page__buttons-list">
-      {% for collection in section.settings.collection_list %}
-          <li><h2><a href="{{ collection.url }}" class="collections-page__button" data-index="{{ forloop.index }}">{{ collection.title }}</a></h2></li>
+      {% for collection in collection_list %}
+        {% assign this_first_letter = collection.title.first | downcase %}
+        <li {% unless forloop.first or previous_first_letter == this_first_letter%}class="mt-text-line"{% endunless %} ><h2><a href="{{ collection.url }}" class="collections-page__button" data-index="{{ forloop.index }}">{{ collection.title }}</a></h2></li>
+        {% assign previous_first_letter = this_first_letter %}
       {% endfor %}
     </ul>
 
     <div class="hidden md:block md:col-start-4 md:col-span-4 lg:col-start-5 lg:col-span-3">
-      {% for collection in section.settings.collection_list %}
+      {% for collection in collection_list %}
         <div class="collections-page__description rte" style="display:none" data-index="{{ forloop.index }}">{{ collection.description }}</div>
       {% endfor %}
     </div>
 
     <div class="md:col-start-9 md:col-span-4">
-      {% for collection in section.settings.collection_list %}
+      {% for collection in collection_list %}
         <div class="collections-page__image" style="display:none" data-index="{{ forloop.index }}">{% render 'image', image: collection.image %}</div>
       {% endfor %}
     </div>
