--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -9,7 +9,7 @@
 {% endcomment %}
 
 <details-modal class="header__search">
-  <details class="max-w-[max-content] relative">
+  <details class="relative">
     <summary class="link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
       <span class="cursor-pointer modal__toggle-open" aria-hidden="true" focusable="false">
         {{ 'general.search.search' | t }}
