--- a/snippets/image.liquid
+++ b/snippets/image.liquid
@@ -1,5 +1,10 @@
 {% if image %}
   {% liquid
+    if aspect_ratio > 0
+      assign aspect_ratio = aspect_ratio
+    else
+      assign aspect_ratio = image.aspect_ratio
+    endif
     assign alt = alt | default: image.alt | escape
     assign class = class | default: ''
     assign class = class | append: ' bg-no-repeat bg-center motion-reduce'
@@ -7,6 +12,7 @@
     assign widths = widths | default: '180, 360, 450, 540, 720, 900, 1080, 1296, 1512, 1728, 1944, 2048, ' | append: image.width
     assign fit = fit | default: 'contain'
     assign placeholder_width =  180
+
     assign width = width | default: image.width
     assign height = height | default: image.height
 
@@ -27,7 +33,6 @@
     endif
   %}
 
-
   {% comment %}
     If image is marked as preload (above the fold) load low-res image placeholder as background image. We don't do this on other images (which will be lazy-loaded) to reduce network requests.
   {% endcomment %}
@@ -41,10 +46,10 @@
 
   {% if use_padding != false %}
     <div class="relative {{ wrapper_class }}">
-      <div style="padding-bottom: {{ 1.00 | divided_by: image.aspect_ratio | times: 100.00 | append: '%' }} ">
+      <div style="padding-bottom: {{ 1.00 | divided_by: aspect_ratio | times: 100.00 | append: '%' }} ">
   {% endif %}
 
-      {{ image | image_url: width: image.width | image_tag:
+      {{ image | image_url: width: width, height: height | image_tag:
         loading: loading,
         preload: preload,
         id: id,
@@ -53,7 +58,6 @@
         sizes: sizes,
         widths: widths,
         width: width,
-        height: height,
         onload: onload,
         alt: alt
       }}
