--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -1,8 +1,7 @@
-{% if template == 'list-collections' %}
-  {% assign collection = collections['all'] %}
-{% endif %}
 
 {% liquid
+  assign collection = collection | default: collections['all']
+
   assign parent_link = null
   for link in menu.links
 
@@ -20,5 +19,7 @@
 
   endfor
 %}
+
+{{ collection | json }}
 
 <div class="flex space-x-1">{% if parent_link %}<a href={{ parent_link.url }} class="uppercase hover:underline">{{ parent_link.title }}</a><span>•</span>{% endif %}<h1>{{ collection.title }}</h1></div>
